--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               dataType: "json",
               data: jQuery("#frm-contact").serialize(),
 
-              beforeSend: function () {
+              beforeS: function () {
                 jQuery("#callback_submit").prop("disabled", true);
                 //jQuery("#frm-contact")[0].reset();
               },
@@ -301,7 +301,7 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <a
-      href="https://api.whatsapp.com/send?phone=919999118381&amp;text=Hello%20Dr. Jangid,!%20I%20am%20interested%20in%20Hair%20Transplant.%20I%20want%20to%20know%20more%20about%20hair%20transplant"
+      href="https://api.whatsapp.com/send/?phone=918585923727&text=Hi%2C+I+have+a+query+regarding+your+services%2Fappointment%21&type=phone_number&app_absent=0"
       class="float"
       target="_blank"
     >
@@ -319,42 +319,55 @@
                   class="log-1"
               /></a>
             </div>
-
             <div class="fr">
-              <div class="fl">
+              <!-- <div class="fl">
                 +91-8585923727<br />
                 <a href="mailto:desmoderm@gmail.com">desmoderm@gmail.com</a>
-              </div>
+              </div> -->
               <div class="social-links1 fr2">
                 <ul>
                   <li class="pt1">
-                    <a href="#" target="_blank"
+                    <a href="https://www.facebook.com/drranjan1" target="_blank"
                       ><i class="fa fa-facebook-f"></i
                     ></a>
                   </li>
                   <li class="gp2">
-                    <a href="#" target="_blank">
+                    <a
+                      href="https://www.instagram.com/desmoderm_official/"
+                      target="_blank"
+                    >
                       <i class="fa fa-instagram"></i>
                     </a>
                   </li>
                   <li class="yt1">
-                    <a href="#" target="_blank">
+                    <a href="https://twitter.com/desmoderm" target="_blank">
                       <i class="fa fa-twitter-square"></i>
                     </a>
                   </li>
                   <li class="tw1">
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://www.linkedin.com/in/dr-ranjan-upadhyay-29067514b/"
+                      target="_blank"
                       ><i class="fa fa-linkedin"></i
                     ></a>
                   </li>
                   <li class="fb1">
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://www.youtube.com/channel/UCVBZrO99ljlnKEej90W5SNg"
+                      target="_blank"
                       ><i class="fa fa-youtube"></i
                     ></a>
                   </li>
                 </ul>
               </div>
               <div class="clr"></div>
+
+              <div class="fr">
+                <div class="fl">
+                  +91-8585923727<br />
+                  <a href="mailto:desmoderm@gmail.com">desmoderm@gmail.com</a>
+                </div>
+              </div>
             </div>
             <div class="clr"></div>
           </div>
@@ -519,96 +532,93 @@
       </div>
     </section>
 
-    <section class="section5">
-      <div class="wraper">
+    <section class="section2">
+      <div class="wraper pad-bot">
         <div class="row">
           <div class="col">
             <h1>Patient Testimonials</h1>
-          </div>
-          <div class="col">
-            <div class="fl">
-              <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                  <li
-                    data-target="#myCarousel"
-                    data-slide-to="0"
-                    class="active"
-                  ></li>
-                  <li data-target="#myCarousel" data-slide-to="1"></li>
-                  <li data-target="#myCarousel" data-slide-to="2"></li>
-                  <li data-target="#myCarousel" data-slide-to="3"></li>
-                  <li data-target="#myCarousel" data-slide-to="4"></li>
-                </ol>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <img
-                      src="assets/img/testimonial/Testimonial_1.jpg"
-                      alt="Los Angeles"
-                      style="width: 100%"
-                    />
-                  </div>
+            <div class="ip-vdo">
+              <div
+                id="owl-demo"
+                class="owl-carousel owl-theme"
+                style="opacity: 1; display: block"
+              >
+                <!-- <div class="item clickme " data="1" ><img src="vdo img/01.jpg"></div> -->
 
-                  <div class="item">
-                    <img
-                      src="assets/img/testimonial/Testimonial_2.jpg"
-                      alt="Chicago"
-                      style="width: 100%"
-                    />
-                  </div>
-
-                  <div class="item">
-                    <img
-                      src="assets/img/testimonial/Testimonial_3.jpg"
-                      alt="New York"
-                      style="width: 100%"
-                    />
-                  </div>
-                  <div class="item">
-                    <img
-                      src="assets/img/testimonial/Testimonial_4.jpg"
-                      alt="hair transplant"
-                      style="width: 100%"
-                    />
-                  </div>
-
-                  <div class="item active">
-                    <img
-                      src="assets/img/testimonial/Testimonial_5.jpg"
-                      alt="Los Angeles"
-                      style="width: 100%"
-                    />
-                  </div>
-
-                  <div class="item active">
-                    <img
-                      src="assets/img/testimonial/Testimonial_6.jpg"
-                      alt="Los Angeles"
-                      style="width: 100%"
-                    />
+                <div class="owl-wrapper-outer">
+                  <div
+                    class="owl-wrapper"
+                    style="
+                      width: 3168px;
+                      left: 0px;
+                      display: block;
+                      transition: all 800ms ease 0s;
+                      transform: translate3d(-264px, 0px, 0px);
+                    "
+                  >
+                    <!-- <div class="owl-item" style="width: 264px">
+                      <video width="400" height="300" controls="">
+                        <source
+                          src="images/video/WhatsApp Video 2021-03-26.mp4"
+                          type="video/mp4"
+                        />
+                      </video>
+                    </div>
+                    <div class="owl-item" style="width: 264px">
+                      <div
+                        class="ytp-cued-thumbnail-overlay-image"
+                        style="
+                          background-image: url('https://i.ytimg.com/vi_webp/khSaGlE3zlM/sddefault.webp');
+                        "
+                      ></div>
+                    </div> -->
+                    <div class="owl-item" style="width: 264px">
+                      <div class="item clickme youtube-click" data="3">
+                        <img src="assets/img/videoframe_0.jpg" />
+                      </div>
+                    </div>
+                    <div class="owl-item" style="width: 264px">
+                      <div class="item clickme youtube-click" data="2">
+                        <img
+                          src="https://i.ytimg.com/vi_webp/khSaGlE3zlM/sddefault.webp"
+                        />
+                      </div>
+                    </div>
+                    <!--
+                    <div class="owl-item" style="width: 264px">
+                      <div class="item clickme youtube-click" data="4">
+                        <img src="images/youtube-5.jpg" />
+                      </div>
+                    </div>
+                    <div class="owl-item" style="width: 264px">
+                      <div class="item clickme youtube-click" data="7">
+                        <img src="images/youtube-6.jpg" />
+                      </div>
+                    </div> -->
                   </div>
                 </div>
 
-                <!-- Left and right controls -->
-                <a
-                  class="left carousel-control"
-                  href="#myCarousel"
-                  data-slide="prev"
-                >
-                  <span class="glyphicon glyphicon-chevron-left"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a
-                  class="right carousel-control"
-                  href="#myCarousel"
-                  data-slide="next"
-                >
-                  <span class="glyphicon glyphicon-chevron-right"></span>
-                  <span class="sr-only">Next</span>
-                </a>
+                <div class="owl-controls clickable">
+                  <div class="owl-pagination">
+                    <div class="owl-page active"><span class=""></span></div>
+                    <div class="owl-page"><span class=""></span></div>
+                  </div>
+                  <div class="owl-buttons">
+                    <div class="owl-prev">prev</div>
+                    <div class="owl-next">next</div>
+                  </div>
+                </div>
               </div>
+              <!--<ul>
+      <li class="clickme" data="1"><img src="vdo img/01.jpg"> </li>
+      <li class="clickme" data="2"><img src="vdo img/02.jpg"> </li>
+      <li class="clickme" data="3"><img src="vdo img/03.jpg">  </li>
+      
+       <li class="clickme" data="4"><img src="vdo img/04.jpg"> </li>
+      <li class="clickme" data="5"><img src="vdo img/05.jpg"> </li>
+      <li class="clickme" data="6"><img src="vdo img/06.jpg">  </li>
+     </ul> -->
             </div>
           </div>
         </div>
@@ -628,37 +638,34 @@
                   <ul>
                     <li class="pt1">
                       <a
-                        href="https://www.facebook.com/hairtransplantbydrjangid"
+                        href="https://www.facebook.com/drranjan1"
                         target="_blank"
                         ><i class="fa fa-facebook-f"></i
                       ></a>
                     </li>
                     <li class="gp2">
                       <a
-                        href="https://www.instagram.com/doc.jangid/"
+                        href="https://www.instagram.com/desmoderm_official/"
                         target="_blank"
                       >
                         <i class="fa fa-instagram"></i>
                       </a>
                     </li>
                     <li class="yt1">
-                      <a
-                        href="https://twitter.com/skinqureclinics"
-                        target="_blank"
-                      >
+                      <a href="https://twitter.com/desmoderm" target="_blank">
                         <i class="fa fa-twitter-square"></i>
                       </a>
                     </li>
                     <li class="tw1">
                       <a
-                        href="https://www.linkedin.com/company/skinqure/"
+                        href="https://www.linkedin.com/in/dr-ranjan-upadhyay-29067514b/"
                         target="_blank"
                         ><i class="fa fa-linkedin"></i
                       ></a>
                     </li>
                     <li class="fb1">
                       <a
-                        href="https://www.youtube.com/c/hairtransplantbydrjangid"
+                        href="https://www.youtube.com/channel/UCVBZrO99ljlnKEej90W5SNg"
                         target="_blank"
                         ><i class="fa fa-youtube"></i
                       ></a>
@@ -684,10 +691,7 @@
                   <img
                     src="https://skinqurehairtransplant.com/images/a2.webp"
                   />
-                  <p style="text-align: center">
-                    Former Resident Dermatology Dr. Balabhai Nanavati Hospital,
-                    Mumbai
-                  </p>
+                  <p style="text-align: center">Former Resident Dermatology</p>
                 </div>
               </div>
 
@@ -697,8 +701,7 @@
                     src="https://skinqurehairtransplant.com/images/a3.webp"
                   />
                   <p style="text-align: center">
-                    Max Super Speciality Hospital Saket & Max Multi Speciality
-                    Hospital Panchsheel
+                    Max Super Speciality Hospital Saket
                   </p>
                 </div>
               </div>
@@ -709,7 +712,7 @@
                     src="https://skinqurehairtransplant.com/images/a4.webp"
                   />
                   <p style="text-align: center">
-                    Consultant Dermatology Lasers and Aesthetic Medicine
+                    Consultant Dermatology Medicine
                   </p>
                 </div>
               </div>
@@ -726,37 +729,34 @@
                     <ul>
                       <li class="pt1">
                         <a
-                          href="https://www.facebook.com/skinqureindia/"
+                          href="https://www.facebook.com/drranjan1"
                           target="_blank"
                           ><i class="fa fa-facebook-f"></i
                         ></a>
                       </li>
                       <li class="gp2">
                         <a
-                          href="https://www.instagram.com/skinqure/"
+                          href="https://www.instagram.com/desmoderm_official/"
                           target="_blank"
                         >
                           <i class="fa fa-instagram"></i>
                         </a>
                       </li>
                       <li class="yt1">
-                        <a
-                          href="https://twitter.com/skinqureclinics"
-                          target="_blank"
-                        >
+                        <a href="https://twitter.com/desmoderm" target="_blank">
                           <i class="fa fa-twitter-square"></i>
                         </a>
                       </li>
                       <li class="tw1">
                         <a
-                          href="https://www.linkedin.com/company/skinqure/"
+                          href="https://www.linkedin.com/in/dr-ranjan-upadhyay-29067514b/"
                           target="_blank"
                           ><i class="fa fa-linkedin"></i
                         ></a>
                       </li>
                       <li class="fb1">
                         <a
-                          href="https://www.youtube.com/c/SkinQure"
+                          href="https://www.youtube.com/channel/UCVBZrO99ljlnKEej90W5SNg"
                           target="_blank"
                           ><i class="fa fa-youtube"></i
                         ></a>
@@ -955,7 +955,7 @@
     </div>
 
     <a class="float_phone" href="tel:+91-9999118381"
-      ><img src="images/call-icon.png" alt=""
+      ><img src="assets/img/call-icon.png" alt=""
     /></a>
     <script>
       $(".carousel").carousel({
