--- a/index.html
+++ b/index.html
@@ -556,14 +556,16 @@
                       left: 0px;
                     "
                   >
-                    <div class="owl-item" style="width: 264px">
+                    <div class="owl-item">
                       <div class="item clickme youtube-click" data="6">
                         <img
+                          width="258"
+                          height="193.5"
                           src="https://i.ytimg.com/vi_webp/khSaGlE3zlM/sddefault.webp"
                         />
                       </div>
                     </div>
-                    <div class="owl-item" style="width: 264px">
+                    <div class="owl-item">
                       <div class="item clickme youtube-click" data="3">
                         <video width="258" height="193.5" controls="">
                           <source
