--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                       left: 0px;
                     "
                   >
-                    <div class="owl-item">
+                    <div class="owl-item" style="width: 264px">
                       <div class="item clickme youtube-click" data="6">
                         <img
                           src="https://i.ytimg.com/vi_webp/khSaGlE3zlM/sddefault.webp"
@@ -565,7 +565,7 @@
                     </div>
                     <div class="owl-item">
                       <div class="item clickme youtube-click" data="3">
-                        <video width="258" height="193.5" controls="">
+                        <video height="193.5" controls="">
                           <source
                             src="assets/img/WhatsApp Video 2021-03-26.mp4"
                             type="video/mp4"
