--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="description"
@@ -320,10 +317,11 @@
               /></a>
             </div>
             <div class="fr">
-              <!-- <div class="fl">
-                +91-8585923727<br />
-                <a href="mailto:desmoderm@gmail.com">desmoderm@gmail.com</a>
-              </div> -->
+              <div class="fl">
+                <a>+91-8585923727</a>
+                <br />
+                <a href="mailto:response@skinqure.in">desmoderm@gmail.com</a>
+              </div>
               <div class="social-links1 fr2">
                 <ul>
                   <li class="pt1">
@@ -361,13 +359,6 @@
                 </ul>
               </div>
               <div class="clr"></div>
-
-              <div class="fr">
-                <div class="fl">
-                  +91-8585923727<br />
-                  <a href="mailto:desmoderm@gmail.com">desmoderm@gmail.com</a>
-                </div>
-              </div>
             </div>
             <div class="clr"></div>
           </div>
@@ -549,42 +540,48 @@
                 <div class="owl-wrapper-outer">
                   <div
                     class="owl-wrapper"
-                    style="
-                      width: auto;
-                      display: flex;
-                      justify-content: center;
-                      left: 0px;
-                    "
+                    style="left: 0px; display: flex; justify-content: center"
                   >
                     <div class="owl-item" style="width: 264px">
+                      <div class="item clickme youtube-click" data="5">
+                        <img
+                          src="https://i.ytimg.com/vi_webp/zb3JjjxPOG0/sddefault.webp"
+                        />
+                      </div>
+                    </div>
+                    <div class="owl-item" style="width: 264px">
                       <div class="item clickme youtube-click" data="6">
+                        <img
+                          src="https://i.ytimg.com/vi_webp/IP8Buod9Wd0/sddefault.webp"
+                        />
+                      </div>
+                    </div>
+                    <div class="owl-item" style="width: 264px">
+                      <div class="item clickme youtube-click" data="3">
+                        <img
+                          src="https://i.ytimg.com/vi_webp/j4gYlYvqeUg/sddefault.webp"
+                        />
+                      </div>
+                    </div>
+                    <div class="owl-item" style="width: 264px">
+                      <div class="item clickme youtube-click" data="4">
                         <img
                           src="https://i.ytimg.com/vi_webp/khSaGlE3zlM/sddefault.webp"
                         />
                       </div>
                     </div>
-                    <div class="owl-item">
-                      <div class="item clickme youtube-click" data="3">
-                        <video height="193.5" controls="">
-                          <source
-                            src="assets/img/WhatsApp Video 2021-03-26.mp4"
-                            type="video/mp4"
-                          />
-                        </video>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </div>
-              <!-- <ul>
-                <li class="clickme" data="1"><img src="vdo img/01.jpg" /></li>
-                <li class="clickme" data="2"><img src="vdo img/02.jpg" /></li>
-                <li class="clickme" data="3"><img src="vdo img/03.jpg" /></li>
-
-                <li class="clickme" data="4"><img src="vdo img/04.jpg" /></li>
-                <li class="clickme" data="5"><img src="vdo img/05.jpg" /></li>
-                <li class="clickme" data="6"><img src="vdo img/06.jpg" /></li>
-              </ul> -->
+              <!--<ul>
+      <li class="clickme" data="1"><img src="vdo img/01.jpg"> </li>
+      <li class="clickme" data="2"><img src="vdo img/02.jpg"> </li>
+      <li class="clickme" data="3"><img src="vdo img/03.jpg">  </li>
+      
+       <li class="clickme" data="4"><img src="vdo img/04.jpg"> </li>
+      <li class="clickme" data="5"><img src="vdo img/05.jpg"> </li>
+      <li class="clickme" data="6"><img src="vdo img/06.jpg">  </li>
+     </ul> -->
             </div>
           </div>
         </div>
