--- a/index.html
+++ b/index.html
@@ -318,9 +318,10 @@
             </div>
             <div class="fr">
               <div class="fl">
-                <a>+91-8585923727</a>
-                <br />
-                <a href="mailto:response@skinqure.in">desmoderm@gmail.com</a>
+                <div class="fr2"><a>+91-8585923727</a></div>
+                <div class="fr2">
+                  <a href="mailto:response@skinqure.in">desmoderm@gmail.com</a>
+                </div>
               </div>
               <div class="social-links1 fr2">
                 <ul>
