--- a/index.html
+++ b/index.html
@@ -318,7 +318,9 @@
             </div>
             <div class="fr">
               <div class="fl">
-                <div class="fr2"><a>+91-8585923727</a></div>
+                <div class="fr2">
+                  <a href="tel:+91-8585923727">+91-8585923727</a>
+                </div>
                 <div class="fr2">
                   <a href="mailto:response@skinqure.in">desmoderm@gmail.com</a>
                 </div>
@@ -921,7 +923,7 @@
       </div>
     </div>
 
-    <a class="float_phone" href="tel:+91-9999118381"
+    <a class="float_phone" href="tel:+91-8585923727"
       ><img src="assets/img/call-icon.png" alt=""
     /></a>
     <script>
