--- a/index.html
+++ b/index.html
@@ -952,89 +952,113 @@
       <div class="container">
         <h1>Testimonials</h1>
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="card border-light bg-light text-center">
-              <i
-                class="fa fa-quote-left fa-3x card-img-top rounded-circle"
-                aria-hidden="true"
-              ></i>
-              <div class="card-body blockquote">
-                <p class="card-text">
-                  I want to express my gratitude to Dr. Ranjan Upadhayay for the
-                  hair treatment. The subtle improvement in my hair growth has
-                  been remarkable. His meticulous approach and genuine concern
-                  for his patients makes him an outstanding dermatologist. I'm
-                  confident in recommending his services to anyone seeking
-                  subtle yet effective dermatology treatment.
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                </p>
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators" style="margin: 0 20%">
+              <li
+                data-target="#myCarousel"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" style="width: 33.33%">
+              <div class="item active">
+                <div class="">
+                  <div class="card border-light bg-light text-center">
+                    <i
+                      class="fa fa-quote-left fa-3x card-img-top rounded-circle"
+                      aria-hidden="true"
+                    ></i>
+                    <div class="card-body blockquote">
+                      <p class="card-text">
+                        I want to express my gratitude to Dr. Ranjan Upadhayay
+                        for the hair treatment. The subtle improvement in my
+                        hair growth has been remarkable. His meticulous approach
+                        and genuine concern for his patients makes him an
+                        outstanding dermatologist. I'm confident in recommending
+                        his services to anyone seeking subtle yet effective
+                        dermatology treatment.
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                      </p>
 
-                <footer class="blockquote-footer">
-                  <cite title="Source Title">Ankhadeep Roy</cite>
-                </footer>
+                      <footer class="blockquote-footer">
+                        <cite title="Source Title">Ankhadeep Roy</cite>
+                      </footer>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
 
-          <div class="col-md-6 col-lg-4">
-            <div class="card border-light bg-light text-center">
-              <i
-                class="fa fa-quote-left fa-3x card-img-top rounded-circle"
-                aria-hidden="true"
-              ></i>
-              <div class="card-body blockquote">
-                <p class="card-text">
-                  At later end of 2023, I decided to have a hair transplant
-                  done. Luckily found Desmoderm Clinic and Dr. Ranjan had great
-                  feedbacks, so choose to carry on at this very clinic. And as
-                  planned the surgery went excellent.Dr. Ranjan was constantly
-                  supervising everything. Regardless to say the staff too are
-                  very professional and friendly. It's been c.3.5 months now and
-                  I can see the results already. Knowing the fact the entire
-                  procedure needs some time, eagerly waiting for the comming
-                  months to experience the final results. Kudos to Dr. Ranjan
-                  Sir and the entire team of Desmoderm. Many thanks 🙏 and a 5+
-                  ⭐ from my experien
-                </p>
-                <footer class="blockquote-footer">
-                  <cite title="Source Title">Iswar Borah</cite>
-                </footer>
+              <div class="item">
+                <div class="">
+                  <div class="card border-light bg-light text-center">
+                    <i
+                      class="fa fa-quote-left fa-3x card-img-top rounded-circle"
+                      aria-hidden="true"
+                    ></i>
+                    <div class="card-body blockquote">
+                      <p class="card-text">
+                        At later end of 2023, I decided to have a hair
+                        transplant done. Luckily found Desmoderm Clinic and Dr.
+                        Ranjan had great feedbacks, so choose to carry on at
+                        this very clinic. And as planned the surgery went
+                        excellent.Dr. Ranjan was constantly supervising
+                        everything. Regardless to say the staff too are very
+                        professional and friendly. It's been c.3.5 months now
+                        and I can see the results already. Knowing the fact the
+                        entire procedure needs some time, eagerly waiting for
+                        the comming months to experience the final results.
+                        Kudos to Dr. Ranjan Sir and the entire team of
+                        Desmoderm. Many thanks 🙏 and a 5+ ⭐ from my experien
+                      </p>
+                      <footer class="blockquote-footer">
+                        <cite title="Source Title">Iswar Borah</cite>
+                      </footer>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
 
-          <div class="col-md-6 col-lg-4">
-            <div class="card border-light bg-light text-center">
-              <i
-                class="fa fa-quote-left fa-3x card-img-top rounded-circle"
-                aria-hidden="true"
-              ></i>
-              <div class="card-body blockquote">
-                <p class="card-text">
-                  Now its almost a month, since I have had hair transplant from
-                  here. Being honest this had been a great overall experience
-                  for me. Not just the doctor but also the staff is quite is
-                  quite helpful and knowledgeable, taking care of schedules,
-                  medicines and follow up. I would recommend 💯Desmoderm
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                </p>
-                <footer class="blockquote-footer">
-                  <cite title="Source Title">Yogesh Raj Purohit</cite>
-                </footer>
+              <div class="item">
+                <div class="">
+                  <div class="card border-light bg-light text-center">
+                    <i
+                      class="fa fa-quote-left fa-3x card-img-top rounded-circle"
+                      aria-hidden="true"
+                    ></i>
+                    <div class="card-body blockquote">
+                      <p class="card-text">
+                        Now its almost a month, since I have had hair transplant
+                        from here. Being honest this had been a great overall
+                        experience for me. Not just the doctor but also the
+                        staff is quite is quite helpful and knowledgeable,
+                        taking care of schedules, medicines and follow up. I
+                        would recommend 💯Desmoderm
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                      </p>
+                      <footer class="blockquote-footer">
+                        <cite title="Source Title">Yogesh Raj Purohit</cite>
+                      </footer>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
