--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       href="https://www.hairtransplantdelhi.org/lp/best-hair-transplant-doctor/assets/css/style.css?v=3662"
     />
 
-    <link rel="stylesheet" type="text/css" href="assets/css/responcive.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://www.hairtransplantdelhi.org/lp/best-hair-transplant-doctor/assets/css/grt-youtube-popup.css"
