--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
               <li data-target="#myCarousel" data-slide-to="1"></li>
               <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
-            <div class="carousel-inner" style="width: 33.33%">
+            <div class="carousel-inner">
               <div class="item active">
                 <div class="">
                   <div class="card border-light bg-light text-center">
