--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
         <div class="row">
           <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
-            <ol class="carousel-indicators" style="margin: 0 20%">
+            <ol class="carousel-indicators testimonials-indicators">
               <li
                 data-target="#myCarousel"
                 data-slide-to="0"
@@ -963,7 +963,7 @@
               <li data-target="#myCarousel" data-slide-to="1"></li>
               <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
-            <div class="carousel-inner">
+            <div class="carousel-inner testimonials-inner">
               <div class="item active">
                 <div class="">
                   <div class="card border-light bg-light text-center">
@@ -989,7 +989,6 @@
                         <br />
                         <br />
                       </p>
-
                       <footer class="blockquote-footer">
                         <cite title="Source Title">Ankhadeep Roy</cite>
                       </footer>
