--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
                         entire procedure needs some time, eagerly waiting for
                         the comming months to experience the final results.
                         Kudos to Dr. Ranjan Sir and the entire team of
-                        Desmoderm. Many thanks 🙏 and a 5+ ⭐ from my experien
+                        Desmoderm. Many thanks 🙏 and a 5+ ⭐ from my experience
                       </p>
                       <footer class="blockquote-footer">
                         <cite title="Source Title">Iswar Borah</cite>
